syntax = "proto3";

package auth;

import "google/protobuf/empty.proto";

service AuthService {
  rpc Register(Register) returns (RegisterResponse);
  rpc Login(Login) returns (LoginResponse);
  rpc Logout(Logout) returns (LogoutResponse);
  rpc RefreshToken(RefreshToken) returns (LoginResponse);
  rpc FindByUserId(RefreshToken) returns (User);
}

message Register {
     int64 idUser = 1;
     string email = 2;
     string phone= 3;
     string password = 4;
     string role = 5;
     string fullName = 6;
     string avatarUrl = 7;
}

message Login {
        string login = 1;
        string password = 2;
        string role = 3;
}

message Logout {
        int64 idUser =1;
}

message RefreshToken {
        int64 idUser = 1;
} 

message RegisterResponse {
        int64 idUser = 1;
        string email = 2;
        string phone = 3;
        string isActive = 4;
        string role = 5;
       
}

message LoginResponse {
        User user = 1;
        string  accessToken =2;
        string  refreshToken=3;
        string  expiresAt=4 ;
}

message LogoutResponse {
        bool status = 1;
}

message User {
        string id = 1;
        string email =2;
        string phone = 3;
        bool isActive = 6;
        string fullName = 7;
        string avatarUrl = 8;
        string role = 9;
}